add task solution

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,6 +1,6 @@
 .events {
-  @include sectionMaxWidth;
-  @include contentPaddingInLine;
+  @include section-max-width;
+  @include content-padding-in-line;
 
   &__block {
     display: grid;
@@ -9,7 +9,7 @@
 }
 
 .event {
-  @include onDesktop {
+  @include on-desktop {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -19,13 +19,13 @@
     display: flex;
     justify-content: space-between;
 
-    @include onDesktop {
+    @include on-desktop {
       justify-content: flex-start;
     }
   }
 
   &__block {
-    @include onDesktop {
+    @include on-desktop {
       width: 370px;
     }
   }
@@ -33,7 +33,7 @@
   &__photo {
     width: 100%;
 
-    @include onDesktop {
+    @include on-desktop {
       width: 670px;
 
       @include hover(transform, scale(1.05));
@@ -47,7 +47,7 @@
     letter-spacing: 0%;
     color: $main-subtitle;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 44px;
       font-size: 14px;
       line-height: 100%;
@@ -62,20 +62,20 @@
     letter-spacing: 0%;
     color: $main-green-color;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 44px;
       font-size: 14px;
       line-height: 100%;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-left: 18px;
     }
   }
 
   &__name {
     margin: 0;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-weight: 400;
     font-size: 28px;
     line-height: 100%;
@@ -85,7 +85,7 @@
     align-items: center;
     gap: 15px;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 36px;
     }
 
