--- a/src/styles/blocks/follow.scss
+++ b/src/styles/blocks/follow.scss
@@ -5,12 +5,12 @@
   background-position: center;
   margin-top: 100px;
 
-  @include onTablet {
+  @include on-tablet {
     margin-top: 92px;
     height: 380px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     margin-top: 200px;
     height: 550px;
   }
@@ -26,11 +26,11 @@
   &__text {
     width: 280px;
 
-    @include onTablet {
+    @include on-tablet {
       width: 460px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 570px;
     }
   }
@@ -43,12 +43,12 @@
     height: 50px;
 
 
-    @include onTablet {
+    @include on-tablet {
       width: 460px;
       height: 70px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 570px;
     }
   }
@@ -61,11 +61,11 @@
     padding-left: 24px;
 
 
-    @include onTablet {
+    @include on-tablet {
       width: 374px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 470px;
     }
 
@@ -89,12 +89,12 @@
     justify-content: center;
     border: none;
 
-    @include onTablet {
+    @include on-tablet {
       width: 70px;
       margin-left: 16px;
     }
 
-    @include onTablet {
+    @include on-tablet {
       width: 70px;
       margin-left: 30px;
     }
