--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,17 +1,17 @@
 .footer {
-  @include sectionMaxWidth;
-  @include contentPaddingInLine;
+  @include section-max-width;
+  @include content-padding-in-line;
 
   &__general {
 
-    @include onDesktop {
+    @include on-desktop {
       display: flex;
     }
   }
 
   &__top {
 
-    @include onTablet {
+    @include on-tablet {
       display: flex;
     }
   }
@@ -21,12 +21,12 @@
     justify-content: space-between;
     gap: 28px;
 
-    @include onTablet {
+    @include on-tablet {
       display: flex;
       justify-content: space-between;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-left: 130px;
     }
 
@@ -41,7 +41,7 @@
     display: flex;
     flex-direction: row;
 
-    @include onTablet {
+    @include on-tablet {
       display: flex;
       flex-direction: column;
     }
@@ -50,7 +50,7 @@
   &__logo {
     display: flex;
     flex-direction: column;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-weight: 700;
     font-size: 30px;
     line-height: 30px;
@@ -61,7 +61,7 @@
     display: flex;
     align-items: center;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 62px;
     }
   }
@@ -72,7 +72,7 @@
 
   &__hours {
 
-    @include onTablet {
+    @include on-tablet {
       margin-left: 40px;
     }
 
@@ -81,11 +81,11 @@
   &__weekend {
     max-width: 220px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-left: 40px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 170px;
     }
   }
@@ -93,7 +93,7 @@
   &__contacts {
     margin-top: 40px;
 
-    @include onDesktop {
+    @include on-desktop {
       width: 172px;
     }
   }
@@ -126,7 +126,7 @@
     display: flex;
     justify-content: flex-end;
 
-    @include onTablet {
+    @include on-tablet {
       display: none;
     }
   }
@@ -154,13 +154,13 @@
     background-color: rgba(26, 90, 76, 0.5);
     margin-top: 20px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 64px;
       width: 490px;
       margin-left: 120px;
     }
 
-    @include onDesktop{
+    @include on-desktop{
       margin-top: 39px;
       height: 260px;
       width: 0;
@@ -178,11 +178,11 @@
     display: flex;
     gap: 20px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-left: 120px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-left: 65px;
     }
 
@@ -213,7 +213,7 @@
       margin-top: 20px;
     }
 
-    @include onTablet {
+    @include on-tablet {
       width: 220px;
     }
 
@@ -227,7 +227,7 @@
     align-items: center;
     gap: 10px;
 
-    @include onTablet {
+    @include on-tablet {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
