--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,11 +1,11 @@
 .gallery {
-  @include sectionMaxWidth;
-  @include contentPaddingInLine;
+  @include section-max-width;
+  @include content-padding-in-line;
 
   &__pictures {
     display: none;
 
-    @include onDesktop {
+    @include on-desktop {
       display: grid;
       grid-template-columns: repeat(12, 1fr);
       gap: 30px;
@@ -24,7 +24,7 @@
       width: 100%;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       @include hover(transform, scale(1.05));
     }
 
