--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,11 +1,12 @@
 .header {
   //display: none !important;
+
   position: relative;
   max-width: 1900px;
   margin-left: auto;
 
 
-  @include onTablet {
+  @include on-tablet {
     display: flex;
     flex-direction: row;
   }
@@ -19,19 +20,19 @@
     background-position: center;
     z-index: 1;
 
-    @include onTablet {
+    @include on-tablet {
       width: 50%;
       position: relative;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 60%;
       position: relative;
     }
   }
 
   &__content {
-    @include onTablet {
+    @include on-tablet {
       position: absolute;
       top: 15px;
       left: 0;
@@ -45,11 +46,11 @@
     top: 9px;
     transform: translate(-50%);
 
-    @include onTablet {
+    @include on-tablet {
       width: 220px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       width: 170px;
       left: 39%;
     }
@@ -59,7 +60,7 @@
   &__logo {
     display: flex;
     flex-direction: column;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-weight: 700;
     font-size: 30px;
     line-height: 30px;
@@ -74,17 +75,16 @@
       left: 20px;
       top: 27px;
 
-      @include onTablet {
+      @include on-tablet {
       position: absolute;
       left: 34px;
       top: 39px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       position: absolute;
       left: 55px;
       top: 39px;
     }
   }
-
 }
