--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -20,11 +20,11 @@
   &--insta {
     background-image: url(../images/instagram.svg);
 
-    @include onTablet {
+    @include on-tablet {
       margin-left: 32px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-left: 22px;
     }
   }
