--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -2,9 +2,9 @@
   min-height: 42vh;
   background-color: #1A5A4C;
   max-width: 100%;
-  @include contentPaddingInLine;
+  @include content-padding-in-line;
 
-  @include onTablet {
+  @include on-tablet {
    display: flex;
    min-height: 18vh;
    width: 100%;
@@ -15,7 +15,7 @@
     max-width: 1900px;
     margin-left: auto;
 
-    @include onTablet {
+    @include on-tablet {
       display: flex;
     }
   }
@@ -26,7 +26,7 @@
     padding-bottom: 24px;
 
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 39px;
       height: 145px;
       border-bottom: none;
@@ -37,13 +37,13 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 39px;
       height: 145px;
       border-right: 1px solid rgba(255, 255, 255, 0.5);
      }
 
-     @include onDesktop {
+     @include on-desktop {
       margin-left: 102px;
      }
   }
@@ -54,11 +54,11 @@
     margin-left: 28px;
     width: 100px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-left: 38px;
      }
 
-     @include onDesktop {
+     @include on-desktop {
       margin-left: 102px;
      }
 
@@ -69,7 +69,7 @@
       line-height: 16px;
       font-weight: 500;
 
-      @include onDesktop {
+      @include on-desktop {
         font-size: 22px;
         line-height: 100%;
        }
@@ -95,13 +95,13 @@
   &__center {
     margin-top: 24px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 39px;
       width: 170px;
       margin-left: 38px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-left: 102px;
     }
 
@@ -116,7 +116,7 @@
   &__bottom {
     margin-top: 16px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 80px;
       width: 170px;
       margin-left: 26px;
