--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -3,18 +3,18 @@
   font-size: 36px;
   line-height: 100%;
   text-align: center;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   margin: 0;
   margin-bottom: 40px;
 
   &--1 {
     margin-top: 70px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 88px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-top: 200px;
     }
   }
@@ -22,23 +22,23 @@
   &--2 {
     margin-top: 183px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 208px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-top: 302px;
     }
   }
 
 
-  @include onTablet {
+  @include on-tablet {
     font-size: 48px;
     margin-bottom: 48px;
     text-align: left;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     margin-bottom: 56px;
     text-align: left;
   }
@@ -49,7 +49,7 @@
   font-size: 36px;
   line-height: 100%;
   text-align: center;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   margin: 0;
   margin-bottom: 20px;
   color: $menu-text-colort;
@@ -57,17 +57,17 @@
   &--3 {
     margin-top: 88px;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 82px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-top: 163px;
     }
   }
 
 
-  @include onTablet {
+  @include on-tablet {
     font-size: 48px;
     margin-bottom: 16px;
   }
@@ -85,12 +85,12 @@
     color: $menu-text-colort;
   }
 
-  @include onTablet {
+  @include on-tablet {
     line-height: 100%;
     margin-bottom: 64px;
   }
 
-  @include onTablet {
+  @include on-tablet {
     margin-bottom: 72px;
   }
 }
