--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,31 +5,31 @@
   }
 }
 
-@mixin onTablet {
+@mixin on-tablet {
   @media (min-width: $tablet-min-width) {
     @content;
   }
 }
 
-@mixin onDesktop {
+@mixin on-desktop {
   @media (min-width: $desktop-min-width) {
     @content;
   }
 }
 
-@mixin contentPaddingInLine() {
+@mixin content-padding-in-line() {
   padding-inline: 20px;
 
-  @include onTablet {
+  @include on-tablet {
     padding-inline: 34px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     padding-inline: 55px;
   }
 }
 
-@mixin sectionMaxWidth() {
+@mixin section-max-width() {
   margin-inline: auto;
   max-width: 1440px;
 }
