--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -1,12 +1,12 @@
 .lection {
   margin-top: 60px;
 
-  @include onTablet {
+  @include on-tablet {
     margin-top: 112px;
     padding-inline: 34px;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     margin-top: 104px;
     padding-inline: 0;
   }
@@ -20,11 +20,11 @@
     display: flex;
     justify-content: center;
 
-    @include onTablet {
+    @include on-tablet {
       height: 390px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       height: 550px;
     }
   }
@@ -39,14 +39,14 @@
     justify-content: space-around;
     box-shadow: 0px 2px #1A5A4C40;
 
-    @include onTablet {
+    @include on-tablet {
       margin-top: 306px;
       width: 570px;
       height: 204px;
       justify-content: center;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-top: 448px;
     }
   }
@@ -55,7 +55,7 @@
     display: flex;
     justify-content: space-around;
 
-    @include onTablet {
+    @include on-tablet {
       margin-bottom: 23px;
       justify-content: space-around;
     }
@@ -69,7 +69,7 @@
     color: $main-subtitle;
     margin: 0;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 14px;
     }
   }
@@ -82,14 +82,14 @@
     color: $main-green-color;
     margin: 0;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 14px;
     }
   }
 
   &__name {
     text-align: center;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-weight: 400;
     font-size: 28px;
     line-height: 100%;
@@ -97,7 +97,7 @@
     color: $main-titles-color;
     margin: 0;
 
-    @include onTablet {
+    @include on-tablet {
       font-size: 36px;
     }
   }
