--- a/src/styles/blocks/museum.scss
+++ b/src/styles/blocks/museum.scss
@@ -1,8 +1,8 @@
 .museum {
   margin-top: 20px;
-  @include contentPaddingInLine;
+  @include content-padding-in-line;
 
-  @include onTablet {
+  @include on-tablet {
     order: -1;
     margin-top: 127px;
     padding-right: 0px;
@@ -12,7 +12,7 @@
     width: 50%;
   }
 
-  @include onDesktop {
+  @include on-desktop {
     margin-top: 206px;
     width: 40%;
     padding-right: 55px;
@@ -23,17 +23,17 @@
     display: flex;
     justify-content: center;
 
-    @include onTablet {
+    @include on-tablet {
       justify-content: flex-start;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       justify-content: space-between;
     }
   }
 
   h1 {
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-weight: 700;
     font-size: 45px;
     line-height: 45px;
@@ -41,14 +41,14 @@
     margin: 0;
     color: $main-titles-color;
 
-    @include onTablet {
+    @include on-tablet {
       text-align: start;
       width: 280px;
       font-size: 54px;
       line-height: 120%;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       text-align: start;
       width: 470px;
       font-size: 72px;
@@ -60,7 +60,7 @@
   &__event {
     display: none;
 
-    @include onDesktop {
+    @include on-desktop {
       display: flex;
       flex-direction: column-reverse;
       align-items: center;
@@ -96,12 +96,12 @@
 
     @include hover(border, 3px solid $main-green-color);
 
-    @include onTablet {
+    @include on-tablet {
       width: 270px;
       height: 70px;
     }
 
-    @include onDesktop {
+    @include on-desktop {
       margin-bottom: 118px;
     }
   }
@@ -121,19 +121,19 @@
 
   a {
     text-decoration: none;
-    font-family: IBM;
+    font-family: IBM, sans-serif;;
     font-size: 16px;
     line-height: 16px;
     color: #0F0E08;
     font-weight: 500;
   }
-}
 
-#link {
-  font-size: 14px;
-  font-weight: 700px;
-  text-transform: uppercase;
-  writing-mode: vertical-rl;
-  transform: rotate(180deg);
-  color: $main-subtitle;
+  #link {
+    font-size: 14px;
+    font-weight: 700px;
+    text-transform: uppercase;
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+    color: $main-subtitle;
+  }
 }
