--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,5 +1,4 @@
 .gallery {
-  // display: none !important;
   &__title {
     margin-bottom: 40px;
 
@@ -26,11 +25,13 @@
 
   &__content {
     @include pageGrid;
+
     row-gap: 30px;
   }
 
   &__row {
     grid-column: span 12;
+
     @include pageGrid;
 
     &--high {
@@ -58,5 +59,7 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+
+    @include hover(scale, 1.05);
   }
 }
