--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,6 +1,7 @@
 .icon {
   height: 24px;
   width: 24px;
+  display: block;
 
   @include hover(transform, scale(1.2));
 
@@ -19,5 +20,19 @@
 
   &--close {
     background-image: url(../images/icons/icon-close.png);
+  }
+
+  &--facebook {
+    background-image: url(../images/icons/facebook.png);
+  }
+
+  &--instagram {
+    background-image: url(../images/icons/instagram.png);
+  }
+
+  &--arrow-up {
+    height: 50px;
+    width: 50px;
+    background-image: url(../images/icons/arrow-up.png);
   }
 }
