--- a/src/styles/blocks/my-swiper.scss
+++ b/src/styles/blocks/my-swiper.scss
@@ -3,7 +3,7 @@
 @import 'swiper/modules/pagination';
 
 .my-swiper {
-  // display: none !important;
+  display: none !important;
   padding-left: 20px;
 
   @include onTablet {
@@ -20,12 +20,27 @@
     overflow: hidden;
     display: flex;
     justify-content: center;
+    margin-bottom: 30px;
+
+    @include onTablet {
+      margin-bottom: 42px;
+      height: 543px;
+    }
+
+    &--tablet {
+      display: none;
+
+      @include onTablet {
+        display: block;
+      }
+    }
   }
 
   &__image {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
   }
 }
 
@@ -34,7 +49,6 @@
     display: flex;
     gap: 22px;
     justify-content: center;
-    margin-top: 20px;
   }
 
   &-pagination-bullet {
