--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -13,7 +13,17 @@
     gap: 30px;
   }
 
+  &--footer {
+    padding: 0;
+    gap: 20px;
+
+    @include onDesktop {
+      gap: 30px;
+    }
+  }
+
   &__link {
+    display: block;
     width: 100px;
     text-decoration: none;
     font-weight: 500;
@@ -28,6 +38,13 @@
       font-weight: 500;
       font-size: 22px;
     }
+
+    &--footer {
+      width: 100%;
+      font-weight: 400;
+      font-size: 14px;
+      color: rgba(15, 14, 8, 1);
+    }
   }
 
   &__block {
@@ -41,6 +58,11 @@
 
     @include onDesktop {
       gap: 30px;
+    }
+
+    &--footer {
+      width: 50%;
+      gap: 20px;
     }
   }
 }
