--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,7 +1,5 @@
 .page {
-  font-family:
-    "IBM Plex Sans",
-    sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   font-size: 14px;
   color: #0f0e08;
   scroll-behavior: smooth;
@@ -9,6 +7,10 @@
 
   &__body {
     margin: 0;
+  }
+
+  &:has(.page__menu:target) {
+    overflow: hidden; /* not to scroll the page */
   }
 
   &__menu {
