--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -1,5 +1,4 @@
 .lecture {
-  // display: none !important;
   position: relative;
 
   &__image {
@@ -43,7 +42,7 @@
     padding: 20px 0;
     background-color: #fff;
     z-index: 2;
-    box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
 
     @include onTablet {
       box-sizing: border-box;
@@ -103,7 +102,7 @@
   }
 
   &__title {
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-weight: 400;
     font-size: 28px;
     text-align: center;
