--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,12 +1,13 @@
 .subscribe {
-  // display: none !important;
   background-image: url(/src/images/subscribe.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  margin-bottom: 50px;
 
   &__content {
     padding: 88px 0;
+
     @include pageGrid;
 
     @include onTablet {
@@ -36,7 +37,7 @@
   }
 
   &__title {
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 100%;
@@ -49,7 +50,7 @@
   }
 
   &__text {
-    font-family: IBM Plex Sans;
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 18px;
     line-height: 150%;
 
@@ -93,7 +94,7 @@
     }
 
     &::placeholder {
-      font-family: Montserrat;
+      font-family: Montserrat, sans-serif;
       font-size: 14px;
       line-height: 100%;
       color: rgba(104, 116, 128, 1);
@@ -111,5 +112,7 @@
     @include onTablet {
       width: 70px;
     }
+
+    @include hover(scale, 1.2);
   }
 }
