--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import './blocks/page';
 @import './blocks/container';
 @import './blocks/header';
+@import './blocks/logo';
 @import './blocks/button';
 @import './blocks/icon';
 @import './blocks/menu';
@@ -16,3 +17,4 @@
 @import './blocks/gallery';
 @import './blocks/my-swiper';
 @import './blocks/subscribe';
+@import './blocks/footer';
