--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -12,6 +12,14 @@
 
 @mixin content-padding-inline {
   padding-inline: 20px;
+
+  @include on-tablet {
+    padding-inline: 39px;
+  }
+
+  @include on-desktop {
+    padding-inline: 55px;
+  }
 }
 
 @mixin hover($_property, $_toValue) {
