--- a/src/styles/block/contacts.scss
+++ b/src/styles/block/contacts.scss
@@ -4,6 +4,10 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 20px;
+
+  box-sizing: border-box;
+  max-width: 1400px;
+  margin: 0 auto;
   margin-top: 50px;
 
   @include on-tablet {
