--- a/src/styles/block/events.scss
+++ b/src/styles/block/events.scss
@@ -12,7 +12,10 @@
   }
 
   &__title {
-    margin: 0 0 40px;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 0 0 40px;
+
     font-size: 36px;
     text-align: center;
 
@@ -23,6 +26,7 @@
 
     @include on-desktop {
       margin-bottom: 56px;
+      padding: 0;
     }
   }
 
@@ -81,7 +85,9 @@
   }
 
   &__item {
-    margin-bottom: 60px;
+    box-sizing: border-box;
+    max-width: 1400px;
+    margin: 0 auto 60px;
 
     @include on-desktop {
       display: flex;
@@ -90,6 +96,7 @@
 
     &:last-child {
       position: relative;
+      max-width: none;
     }
 
     &:last-child .events__photo {
