--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -1,5 +1,25 @@
 .footer {
-  margin: 80px 0 36px;
+  box-sizing: border-box;
+  max-width: 1400px;
+  margin: 0 auto;
+
+  &__container {
+    margin: 80px 0 36px;
+
+    @include on-tablet {
+      @include content-padding-inline;
+
+      display: flex;
+      justify-content: space-between;
+      margin: 120px 0 36px;
+    }
+
+    @include on-desktop {
+      @include content-padding-inline;
+
+      margin: 87px 0 35px;
+    }
+  }
 
   &__text {
     margin: 0;
@@ -14,19 +34,5 @@
     &:first-of-type {
       margin-bottom: 10px;
     }
-  }
-
-  @include on-tablet {
-    @include content-padding-inline;
-
-    display: flex;
-    justify-content: space-between;
-    margin: 120px 0 36px;
-  }
-
-  @include on-desktop {
-    @include content-padding-inline;
-
-    margin: 87px 0 35px;
   }
 }
