--- a/src/styles/block/gallery.scss
+++ b/src/styles/block/gallery.scss
@@ -4,7 +4,13 @@
   height: 100%;
   margin: 183px 0 100px;
 
-  @include content-padding-inline;
+  &__container {
+    @include content-padding-inline;
+
+    box-sizing: border-box;
+    max-width: 1400px;
+    margin: 0 auto;
+  }
 
   @include on-tablet {
     margin: 208px 0 92px;
