--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -1,7 +1,13 @@
 .header {
   display: flex;
   flex-direction: column;
+
+  box-sizing: border-box;
   width: 100%;
+
+  // max-width
+  max-width: 1400px;
+  margin: 0 auto;
 
   @include on-tablet {
     display: grid;
@@ -140,6 +146,12 @@
         @include on-tablet {
           width: 70px;
         }
+      }
+
+      &-icon .img {
+        display: block;
+        width: 24px;
+        height: 24px;
       }
 
       &-text {
