--- a/src/styles/block/totop.scss
+++ b/src/styles/block/totop.scss
@@ -14,7 +14,7 @@
   border-radius: 50%;
 
   background-color: #fff;
-  background-image: url(../images/icon/icon-arrow.png);
+  background-image: url(../images/icon/icon-top-arrow.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 12px cover;
