--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,19 @@
 h1 {
   @extend %h1;
+  color: #000;
+  text-transform: uppercase;
+}
+
+h2 {
+  @extend %h1;
+  color: $main-text-color;
+}
+
+h3 {
+  @extend %h3;
+  color: $main-text-color;
+}
+
+p {
+  @extend %plex300;
 }
