--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,23 @@
 @import 'fonts';
 @import 'typography';
 
+@import './style.scss';
+
+* {
+  box-sizing: border-box;
+
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: $c-gray;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
 }
