--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
 $c-gray: #eee;
+$main-text-color: #0f0e08;
+$paragraph-text-color: 44eE4E;
+$page-green: #1a5a4c;
+
+$tablet-width: 768px;
+$desktop-width: 1280px;
+
+$icon-width: 24px;
+$nav-block-width: 100px;
+$padding-inline: 20px;
