--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -19,6 +19,7 @@
     display: flex;
     justify-content: space-between;
     margin: 40px 0;
+
     @include onTablet {
       flex-direction: column;
       justify-content: start;
@@ -29,6 +30,7 @@
     height: 72px;
     width: 62px;
     cursor: pointer;
+    @include hover(transform, scale(1.1));
   }
   &__social-media {
     display: flex;
@@ -41,11 +43,13 @@
     width: 11px;
     height: 24px;
     cursor: pointer;
+    @include hover(transform, scale(1.1));
   }
   &__instagram {
     width: 24px;
     height: 24px;
     cursor: pointer;
+    @include hover(transform, scale(1.1));
   }
   &__main {
     display: flex;
@@ -74,6 +78,7 @@
     border-radius: 50%;
     cursor: pointer;
     margin-left: auto;
+    @include hover(transform, scale(1.1));
     @include onTablet {
       display: none;
     }
