--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -60,6 +60,7 @@
     background-color: #f14a27;
     border: none;
     cursor: pointer;
+    @include hover(transform, scale(1.1));
     @include onTablet {
       width: 70px;
     }
