--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -4,7 +4,8 @@
   justify-content: space-between;
   border: 1px solid #1a5a4c;
   text-align: center;
-  cursor: pointer;
+
+
   @include onTablet {
     width: 80%;
   }
@@ -31,6 +32,7 @@
     border: none;
     color: #d7dde3;
     cursor: pointer;
+    @include hover(transform, scale(1.1));
     @include onTablet {
       width: 70px;
       height: 70px;
