--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -10,6 +10,7 @@
     height: 12px;
     background-image: url(../images/icons/burger.png);
     z-index: 2;
+    @include hover(transform, scale(1.1));
   }
   &__logo-link {
     z-index: 2;
@@ -23,5 +24,6 @@
   &__logo {
     width: 55px;
     height: 61px;
+    
   }
 }
