--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -43,13 +43,15 @@
 
 .slide {
   width: 100%;
-  @include hover(transform, scale(1.1));
+  overflow: hidden;
 
   &__img {
     width: 100%;
     height: clamp(410px, calc(410px + (100vw - 320px) * 0.297), 543px);
     object-fit: cover;
     object-position: top;
+    transform-origin: center center;
+    @include hover(transform, scale(1.1));
 
     &--one {
       @include onDesktop {
