--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,7 @@
 @import "blocks/slider";
 @import "blocks/subscription";
 @import "blocks/footer";
+@import "blocks/overlay";
 
 html {
   scroll-behavior: smooth;
