--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,28 @@
 @import 'fonts';
 @import 'typography';
 
+@import 'blocks/header';
+@import 'blocks/current-events';
+@import 'blocks/gallery';
+@import 'blocks/tickets';
+@import 'blocks/aside-menu';
+@import 'blocks/icons';
+@import 'blocks/main';
+@import 'blocks/exhibition';
+@import 'blocks/from-classicism';
+@import 'blocks/subscribe';
+@import 'blocks/form';
+@import 'blocks/footer';
+@import 'blocks/contacts';
+@import 'blocks/nav';
+@import 'blocks/schedule';
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background: $c-gray;
 }
