--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -92,6 +92,12 @@
     }
   }
   &__bottom {
+    font-family: IBM Plex Sans;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 100%;
+    letter-spacing: 0%;
+
     display: flex;
     gap: 20px;
 
@@ -112,6 +118,9 @@
   &__email {
     margin: 0;
     cursor: pointer;
+    @include hover(transform, scale(1.1));
+    text-decoration: none;
+    color: #0f0e08;
   }
 }
 .first-block {
