--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -10,7 +10,7 @@
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
 
-    overflow-x: auto; /* Прокрутка лише для галереї */
+    overflow-x: auto;
     display: flex;
 
     max-width: 100%;
