--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -14,8 +14,6 @@
   }
 
   &__picture {
-    /*object-fit: cover;
-    object-position: center;*/
     margin-bottom: 20px;
 
     @include on-tablet {
@@ -30,6 +28,8 @@
 
   &__img {
     width: 100%;
+
+    @include hover(transform, scale(1.05));
   }
 
   &__container {
@@ -38,7 +38,7 @@
     justify-content: center;
 
     @include on-desktop {
-      grid-column: 10 / 13;
+      grid-column: 9 / 13;
     }
   }
 
@@ -59,13 +59,13 @@
 
   &__name {
     font-weight: 500;
-    color: rgba(104, 116, 128, 1);
+    color: $second-title-color;
     text-transform: uppercase;
   }
 
   &__date {
     font-weight: 700;
-    color: rgba(26, 90, 76, 1);
+    color: $menu-bg-color;
   }
 
   &__description {
