--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -13,7 +13,7 @@
 
   &__text {
     font-family: 'IBM Plex Sans';
-    color: rgba(15, 14, 8, 1);
+    color: $main-title-color;
     font-size: 12px;
     line-height: 141%;
     font-weight: 300;
