--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -13,12 +13,12 @@
   &__input {
     height: 50px;
     width: 230px;
-    background-color: #fff;
+    background-color: $white-color;
     font-family: 'Montserrat';
     font-size: 14px;
     font-weight: 400;
     line-height: 100%;
-    color: rgba(104, 116, 128, 1);
+    color: $second-title-color;
 
     @include on-tablet {
       height: 70px;
@@ -48,7 +48,7 @@
     }
 
     &:hover {
-      background-color: rgba(255, 255, 255, 1);
+      background-color: $white-color;
     }
   }
 }
