--- a/src/styles/blocks/from-classicism.scss
+++ b/src/styles/blocks/from-classicism.scss
@@ -30,7 +30,7 @@
   &__content {
     position: absolute;
     top: -40%;
-    background-color: rgba(255, 255, 255, 1);
+    background-color: $white-color;
     min-width: 280px;
     width: 100%;
     padding-block: 20px;
@@ -64,13 +64,13 @@
 
   &__name {
     font-weight: 500;
-    color: rgba(104, 116, 128, 1);
+    color: $second-title-color;
     text-transform: uppercase;
   }
 
   &__date {
     font-weight: 700;
-    color: rgba(26, 90, 76, 1);
+    color: $menu-bg-color;
   }
 
   &__title {
