--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -15,8 +15,10 @@
     font-size: 36px;
     line-height: 72px;
     text-align: center;
-    color: rgba(15, 14, 8, 1);
+    color: $main-title-color;
     margin-bottom: 40px;
+
+    @include padding-inline;
 
     @include on-tablet {
       font-size: 48px;
@@ -51,13 +53,13 @@
     cursor: pointer;
     height: 9px;
     width: 9px;
-    background-color: rgba(224, 224, 224, 1);
+    background-color: $white-color;
     border-radius: 50%;
     display: inline-block;
     transition: all 0.5s ease;
 
     &:hover, :active {
-      background-color: rgba(26, 90, 76, 1);
+      background-color: $menu-bg-color;
     }
   }
 }
