--- a/src/styles/blocks/icons.scss
+++ b/src/styles/blocks/icons.scss
@@ -7,6 +7,7 @@
   position: absolute;
   left: 20px;
   top: 27px;
+  background-repeat: no-repeat;
 
   @include on-tablet {
     left: 34px;
@@ -20,5 +21,9 @@
 
   &--burger-menu {
     background-image: url(../images/burger-menu.png);
+  }
+
+  &--close {
+    background-image: url(../images/burger-close.svg);
   }
 }
