--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -30,7 +30,7 @@
     font-size: 36px;
     line-height: 100%;
     text-align: center;
-    color: rgba(255, 255, 255, 1);
+    color: $white-color;
     margin-bottom: 20px;
   }
 
@@ -40,7 +40,7 @@
     font-size: 18px;
     line-height: 150%;
     text-align: center;
-    color: rgba(255, 255, 255, 1);
+    color: $white-color;
     margin-bottom: 50px;
   }
 }
