--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -6,7 +6,7 @@
   text-decoration: none;
 
    &:hover {
-    box-shadow: 0 5px 15px 0 rgba(26, 90, 76, 1)
+    box-shadow: 0 5px 15px 0 $menu-bg-color;
    }
 
   @include on-tablet {
@@ -14,7 +14,7 @@
   }
 
   &__ticket {
-    background-color: #fff;
+    background-color: $white-color;
     width: 230px;
     line-height: 50px;
     text-align: center;
@@ -22,8 +22,8 @@
     font-weight: 500;
     text-transform: uppercase;
     font-family: 'IBM Plex Sans';
-    color: rgba(15, 14, 8, 1);
-    border: 1px solid rgba(26, 90, 76, 1);
+    color: $main-title-color;
+    border: 1px solid $menu-bg-color;
 
     @include on-tablet {
       width: 200px;
@@ -33,19 +33,19 @@
   &__button {
     cursor: pointer;
     width: 50px;
-    background-color: rgba(26, 90, 76, 1);
+    background-color: $menu-bg-color;
     text-decoration: none;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #fff;
+    color: $white-color;
     line-height: 24px;
     font-size: large;
 
     &:hover {
-      border: 1px solid rgba(26, 90, 76, 1);
-      background-color: #fff;
-      color: rgba(26, 90, 76, 1);
+      border: 1px solid $menu-bg-color;
+      background-color: $white-color;
+      color: $menu-bg-color;
     }
 
     @include on-tablet {
