--- a/src/styles/blocks/aside-menu.scss
+++ b/src/styles/blocks/aside-menu.scss
@@ -5,7 +5,7 @@
   right: 0;
   display: flex;
   flex-direction: column;
-  background-color: rgba(26, 90, 76, 1);
+  background-color: $menu-bg-color;
 
   transition: all 0.3s;
   opacity: 0;
@@ -40,7 +40,20 @@
     padding-left: 64px;
 
     &--color {
-      color: rgba(255, 255, 255, 1);
+      color: $white-color;
+
+      &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        bottom: -8px;
+        display: block;
+        height: 1px;
+        background-color: $white-color;
+
+        transition: transform 0.3s;
+        transform: scale(0);
+      }
     }
 
     @include on-tablet {
@@ -63,8 +76,20 @@
   }
 
   &__schedule {
+    padding-left: 20px;
     &--color {
-      color: rgba(255, 255, 255, 1);
+      color: $white-color;
+    }
+  }
+
+  &__description {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    @include on-tablet {
+      flex-direction: row;
+      gap: 40px;
     }
   }
 }
