--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -5,7 +5,7 @@
     font-size: 36px;
     line-height: 72px;
     text-align: center;
-    color: rgba(15, 14, 8, 1);
+    color: $main-title-color;
     margin-bottom: 40px;
 
     @include on-tablet {
