--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -65,7 +65,6 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    /*padding-left: 20px;*/
 
     @include on-tablet {
       padding-top: 127px;
@@ -117,3 +116,9 @@
     }
   }
 }
+
+/*.left-position {
+  &--line {}
+
+  &--text {}
+}*/
