--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -82,6 +82,7 @@
     flex-direction: column;
     gap: 10px;
     text-align: left;
+    padding: 10px;
 
     &-title {
       margin-bottom: 20px;
@@ -172,7 +173,7 @@
   }
 }
 
-.sheader__menu-separator {
+.separator {
   display: flex;
   width: 100%;
   height: 1px;
