--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -56,7 +56,8 @@
 
     img {
       width: 100%;
-      height: 100%;
+      height: auto;
+      display: block;
       background-repeat: no-repeat;
       background-position: center;
     }
@@ -86,7 +87,7 @@
   &__img {
     flex: 1;
     width: 100%;
-    height: 300px;
+    height: 100%;
     margin-bottom: 20px;
     background: url('../images/bg-header.svg') center/cover no-repeat;
 
