add final solution

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -117,8 +117,33 @@
   }
 }
 
-/*.left-position {
-  &--line {}
+.left-position {
+  padding-left: 55px;
+  display: flex;
+  writing-mode: sideways-lr;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 
-  &--text {}
-}*/
+  @media (max-width: 1200px) {
+    display: none;
+  }
+
+  &--line {
+    background-image: url(../images/left-line.png);
+    /*border-bottom: 1px solid $menu-bg-color;*/
+    width: 1px;
+    height: 70px;
+  }
+
+  &--text {
+    display: flex;
+    font-family: 'IBM Plex Sans';
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 100%;
+    color: $second-title-color;
+    align-items: center;
+    justify-content: center;
+  }
+}
