--- a/src/styles/blocks/slides.scss
+++ b/src/styles/blocks/slides.scss
@@ -1,7 +1,11 @@
 .slides {
   &__fade {
-    @include page-grid;
     row-gap: 30px;
+    @include page-grid;
+
+    @include on-tablet {
+      padding-inline: 34px;
+    }
 
     @include on-desktop {
       padding-inline: 55px;
@@ -39,6 +43,7 @@
     &--winter-big {
       @include on-tablet {
         grid-column: 4 / 7;
+        height: 543px;
       }
 
       @include on-desktop {
@@ -48,10 +53,6 @@
     }
 
     &--park-long {
-      @include on-tablet {
-        grid-column: span 3;
-      }
-
       @include on-desktop {
         grid-column: 1 / 9;
         height: 360px;
@@ -59,10 +60,6 @@
     }
 
     &--sea-aquare {
-      @include on-tablet {
-        grid-column: span 3;
-      }
-
       @include on-desktop {
         height: 360;
         grid-column: 9 / 13;
