--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -56,7 +56,6 @@
 
     img {
       width: 100%;
-      height: auto;
       display: block;
       background-repeat: no-repeat;
       background-position: center;
@@ -87,13 +86,13 @@
   &__img {
     flex: 1;
     width: 100%;
-    height: 100%;
+    min-height: 300px;
     margin-bottom: 20px;
     background: url('../images/bg-header.svg') center/cover no-repeat;
 
     @include on-tablet {
       width: 50%;
-      height: 384px;
+      min-height: 384px;
     }
 
     @include on-desktop {
