--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -6,7 +6,7 @@
   height: 100%;
   background-color: $green-color;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   color: #fff;
   pointer-events: none;
   z-index: 1000;
