--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -55,6 +55,11 @@
   }
 }
 
+// disable scroll page when menu open
+body:has(.menu:target) {
+  overflow: hidden;
+}
+
 .menu__background {
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
